...
  const { setStep } = useContext(InitializationContext);
  const { accountNumber, setAccountNumber } = useContext(AccountNumberContext);
  const { scanQr } = useContext(ScanQrContext);
  const { settings, updateSetting } = useSettings();
  const { lockApp } = useAuthState();
  const { network } = useContext(NetworkContext);
  const [testState, setTestState] = useState<'not_started' | 'running' | 'ok' | 'error'>('not_started');
  const [errorMessage, setErrorMessage] = useState<string>('');
  const [isClearing, setIsClearing] = useState(false);
  const [btcXpub, setBtcXpub] = useState('');
  const [deviceId, setDeviceId] = useState('');

  useEffect(() => {
...
