...
      <Stack.Screen options={{ headerShown: false }} />
      <ScrollView style={styles.container} contentContainerStyle={styles.scrollContent}>
        <View style={styles.headerContainer}>
          <TouchableOpacity style={styles.header} onPress={() => router.push('/Home')} activeOpacity={0.8}>
            <ThemedText style={styles.title}>{Hello.world()}</ThemedText>
          </TouchableOpacity>
          <TouchableOpacity style={styles.settingsButton} onPress={goToSettings} testID="SettingsButton">
            <Ionicons name="settings-outline" size={24} color="rgba(255, 255, 255, 0.8)" />
          </TouchableOpacity>
        </View>

        <View style={styles.networkContainer}>
          <TouchableOpacity onPress={() => router.push('/NetworkSelector')} testID="NetworkSwitcherTrigger" activeOpacity={0.6}>
            <Animated.View style={styles.networkCard} testID={`selectedNetwork-${network}`}>
              <View style={styles.networkCardTouchable}>
                <View
                  style={[
                    styles.networkIconContainer,
                    {
...
