...
        </NativeTabs.Trigger>
        <NativeTabs.Trigger name="swaps" disableAutomaticContentInsets={Platform.OS === 'android'} contentStyle={{ backgroundColor: '#000' }}>
          <NativeTabs.Trigger.Label>Transfer</NativeTabs.Trigger.Label>
          <NativeTabs.Trigger.Icon src={require('@/assets/images/ui/swap.png')} md="swap_horiz" />
        </NativeTabs.Trigger>
        <NativeTabs.Trigger name="explorer" disableAutomaticContentInsets={Platform.OS === 'android'} contentStyle={{ backgroundColor: '#000' }}>
          <NativeTabs.Trigger.Label>Explorer</NativeTabs.Trigger.Label>
          <NativeTabs.Trigger.Icon src={require('@/assets/images/ui/explorer.png')} md="public" />
        </NativeTabs.Trigger>
      </NativeTabs>
    );
  }

...
      />
      <Tabs.Screen
        name="explorer"
        options={{
          title: 'Explorer',
          tabBarIcon: ({ size }) => <Image source={require('@/assets/images/ui/explorer.png')} style={{ width: size, height: size }} contentFit="contain" />,
          tabBarButtonTestID: 'Tab-explorer',
          tabBarAccessibilityLabel: 'Tab-explorer',
        }}
      />
    </Tabs>
  );
}
...
