...
                      autoCapitalize="none"
                      autoCorrect={false}
                      placeholder="Enter URL"
                      placeholderTextColor="rgba(255, 255, 255, 0.5)"
                      selectTextOnFocus={true}
                      editable={!isNetworkSelectorVisible}
                      testID="DappBrowserAddressBar"
                    />
                    {isAddressInputFocused ? (
                      <TouchableOpacity style={styles.stopButton} onPress={() => setAddressInput('')}>
                        <Ionicons name="close-circle" size={20} color="rgba(255, 255, 255, 0.8)" />
                      </TouchableOpacity>
                    ) : isLoading ? (
...
