appId: com.layerzwallet.mobile

---
- runFlow:
    file: wallet-creation.yml

- tapOn:
    id: "SettingsButton"

# Scroll to the bottom to find the Self Test button as emu screen can be small
- scrollUntilVisible:
    element: "Developer Options"
    direction: DOWN
    timeout: 5000
    
- tapOn:
    id: "SelfTestButton"
    
- tapOn: 
    text: "Run Self Test!"
    retryTapIfNoChange: true

- extendedWaitUntil:
    visible: "running"
    timeout: 10000
    optional: true
    
- extendedWaitUntil:
    visible: "ok!"
    timeout: 180000

- assertVisible: "ok!"